service img on safari fix

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -263,9 +263,8 @@ h2
   margin: 20px 0
   img 
     width: 100%
-    max-height: 50vh
-    height: 100%
-    object-fit: fill 
+    height: 50vh
+    object-fit: cover 
     object-position: top center
     border-radius: 5px
 
